--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -75,16 +75,24 @@ font-weight: bold;
   height:35vh;
   object-fit: cover;
   align-self: center;
-  padding-top:10px ;
+  padding:10px ;
   border: none;
-  border-radius: 8px;
-
+  border-radius: 18px;
+  transition: transform 0.5s ease;
 }
+
+.cover:hover {
+  transform: scale(1.1); 
+  max-width:100% ;
+  max-height:100vh ;
+}
+
 .images-4{
     display: flex;
     flex-direction: row;
     gap: 10px;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 
