--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -196,3 +196,71 @@
   height: 170px;
   object-fit: cover;
 }
+
+@media only screen and (max-width: 750px) {
+  /* For mobile phones: */
+
+  .images-4 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    object-fit: cover;
+    gap: 0px;
+  }
+
+  .cover {
+    width: 100%;
+    height: 180vh;
+  }
+
+  .images-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .images-wrapper img {
+    width: 100%;
+    height: 100vh;
+  }
+
+  .cover:hover {
+    transform: scale(1);
+    max-width: 100%;
+    max-height: 100vh;
+  }
+
+  .card-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: space-between;
+  }
+
+  .navigationbar-wrapper h1 {
+    display: none;
+  }
+
+  .navigationbar-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0;
+    padding-right: 10px;
+  }
+
+  .navigationbar-buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 1px;
+    margin-top: 10px;
+    margin-right: 10px;
+    width: 100%;
+  }
+
+  .logo {
+    width: 90px;
+    height: 90px;
+  }
+}
